# cpp-tutorial

./: CMakeLists.txt  Object_Detect_tr_TR.ts  README.md  main.cpp  objectdetect.cpp  objectdetect.h  objectdetect.ui
